--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "d3": "^7.3.0",
     "eslint": "^6.8.0",
     "leaflet": "^1.7.1",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
